# ai-spike-agent-swarm

./: README.md  compose.yaml  experiment-writeup.md  pyproject.toml
notebooks/: .env.example
notebooks/scrapers/: farming-funding.ipynb
notebooks/swarms/: managed-swarm.ipynb
